<resources>
    <string name="app_name">Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="activity_extra">Track Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email:</string>
    <string name="textinho">Sua plataforma musical favorita</string>
    <string name="senha">Senha:</string>
    <string name="lembra">Lembrar-me</string>
    <string name="bt_entrar">Entrar</string>
    <string name="continuee">ou continue com</string>
    <string name="conta">Criar conta</string>
    <string name="Tracker"> © Tracker</string>
    <string name="text_email"> Insira seu e-mail</string>
    <string name="text_senha"> Insira sua senha</string>
    <string name="titulo_cadastro">Cadastro de Usuário</string>
    <string name="btn_tirar_foto">Tirar Foto</string>
    <string name="nome">Nome:</string>
    <string name="text_nome">Insira seu nome completo</string>
    <string name="btn_salvar_cadastro">Salvar Cadastro</string>
    <string name="titulo_editar">Editar Perfil</string>
    <string name="btn_salvar_alteracoes">Salvar Alterações</string>
    <string-array name="generos">
        <item>K-pop</item>
        <item>Sertanejo</item>
        <item>Pop</item>
        <item>Gospel</item>
    </string-array>
    <string name="title_filtro">Filtrar Músicas</string>
    <string name="label_filtro_button">Exibir resultados</string>
    <string name="label_spinner_genero">Gênero</string>
    <string name="label_tema_claro">Modo Claro</string>
    <string name="label_tema_escuro">Modo Escuro</string>
    <string name="label_tema_padrao">Padrão do Sistema</string>
    <string name="title_reviews">Reviews dos usuários</string>
    <string name="label_nota_usuarios">Nota dos usuários:</string>
    <string name="btn_play">Play</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_encerrar">Encerrar</string>
    <string name="bts">BTS</string>
    <string name="nome_musica_kpop_1">Spring Day</string>
    <string name="album_kpop_1">BE</string>
    <string name="avaliador_kpop_1">Ana Beatriz</string>
    <string name="avaliacao_kpop_1">Uma música muito animada e divertida.</string>
    <string name="nome_musica_kpop_2">DNA</string>
    <string name="album_kpop_2">DNA</string>
    <string name="avaliador_kpop_2">Ana Beatriz</string>
    <string name="avaliacao_kpop_2">Uma música leve e muito contagiante.</string>
    <string name="nome_musica_kpop_3">Black Swan</string>
    <string name="album_kpop_3">Black Swan</string>
    <string name="avaliador_kpop_3">Ana Beatriz</string>
    <string name="avaliacao_kpop_3">Uma música emocionante e marcante.</string>
    <string name="nome_musica_kpop_4">run</string>
    <string name="album_kpop_4">Love Yourself: Tear</string>
    <string name="avaliador_kpop_4">Ana Beatriz</string>
    <string name="avaliacao_kpop_4">Uma música intensa e muito bem produzida.</string>
    <string name="nome_musica_kpop_5">Boy with Luv</string>
    <string name="album_kpop_5">Map of the Soul: Persona</string>
    <string name="avaliador_kpop_5">Ana Beatriz</string>
    <string name="avaliacao_kpop_5">Melhor do Ano</string>
    <string name="nome_musica_kpop_6">Dynamite</string>
    <string name="album_kpop_6">BE</string>
    <string name="avaliador_kpop_6">Ana Beatriz</string>
    <string name="avaliacao_kpop_6">Contagiante e cheia de energia</string>
    <string name="nome_musica_kpop_7">Butter</string>
    <string name="album_kpop_7">Butter</string>
    <string name="avaliador_kpop_7">Lucas Silva</string>
    <string name="avaliacao_kpop_7">Sucesso absoluto nas pistas</string>
    <string name="nome_musica_kpop_8">Fake Love</string>
    <string name="album_kpop_8">Love Yourself: Tear</string>
    <string name="avaliador_kpop_8">Mariana Costa</string>
    <string name="avaliacao_kpop_8">Obra-prima do grupo</string>
    <string name="nome_musica_kpop_9">MIC Drop</string>
    <string name="album_kpop_9">Love Yourself: Her</string>
    <string name="avaliador_kpop_9">Pedro Henrique</string>
    <string name="avaliacao_kpop_9">Batida marcante e poderosa</string>
    <string name="nome_musica_kpop_10">Blood Sweat</string>
    <string name="album_kpop_10">Wings</string>
    <string name="avaliador_kpop_10">Camila Rocha</string>
    <string name="avaliacao_kpop_10">Conceito e vocais incríveis</string>
    <string name="Jorge">Jorge e Mateus</string>
    <string name="nome_musica_sertanejo_1">Amo Noite e Dia</string>
    <string name="album_sertanejo_1">Aí Já Era</string>
    <string name="avaliador_sertanejo_1">Ana Clara</string>
    <string name="avaliacao_sertanejo_1">Uma música romântica e inesquecível.</string>
    <string name="nome_musica_sertanejo_2">Voa Flor</string>
    <string name="album_sertanejo_2">Pelo Amor de Deus</string>
    <string name="avaliador_sertanejo_2">Ana Clara</string>
    <string name="avaliacao_sertanejo_2">Uma das músicas mais emocionantes da dupla.</string>
    <string name="nome_musica_sertanejo_3">Seu astral</string>
    <string name="album_sertanejo_3">Terra Sem CEP</string>
    <string name="avaliador_sertanejo_3">Ana Clara</string>
    <string name="avaliacao_sertanejo_3">Muito divertida e fácil de cantar junto.</string>
    <string name="nome_musica_sertanejo_4">Anjos Cantam</string>
    <string name="album_sertanejo_4">Pelo Amor de Deus</string>
    <string name="avaliador_sertanejo_4">Ana Clara</string>
    <string name="avaliacao_sertanejo_4">Uma música romântica e muito gostosa de ouvir.</string>
    <string name="nome_musica_sertanejo_5">Louca de Saudade</string>
    <string name="album_sertanejo_5">Como. Sempre Feito. Nunca.</string>
    <string name="avaliador_sertanejo_5">Ana Clara</string>
    <string name="avaliacao_sertanejo_5">Sofrendo muito com essa</string>
    <string name="nome_musica_sertanejo_6">Pode Chorar</string>
    <string name="album_sertanejo_6">Ao Vivo em Goiânia</string>
    <string name="avaliador_sertanejo_6">João Pedro</string>
    <string name="avaliacao_sertanejo_6">Um clássico marcante</string>
    <string name="nome_musica_sertanejo_7">Amo Noite e Dia</string>
    <string name="album_sertanejo_7">Aí Já Era</string>
    <string name="avaliador_sertanejo_7">Fernanda Lima</string>
    <string name="avaliacao_sertanejo_7">Anima qualquer ambiente</string>
    <string name="nome_musica_sertanejo_8">Sosseguei</string>
    <string name="album_sertanejo_8">Como Sempre Feito Nunca</string>
    <string name="avaliador_sertanejo_8">Gabriel Alves</string>
    <string name="avaliacao_sertanejo_8">Hino das festas sertanejas</string>
    <string name="nome_musica_sertanejo_9">Propaganda</string>
    <string name="album_sertanejo_9">Terra Sem CEP</string>
    <string name="avaliador_sertanejo_9">Beatriz Souza</string>
    <string name="avaliacao_sertanejo_9">Letra chiclete e cativante</string>
    <string name="nome_musica_sertanejo_10">Tijolão</string>
    <string name="album_sertanejo_10">Ao Vivo em Brasília</string>
    <string name="avaliador_sertanejo_10">Rodrigo Melo</string>
    <string name="avaliacao_sertanejo_10">Muito boa para cantar junto</string>
    <string name="Sabrina">Sabrina Carpenter</string>
    <string name="nome_musica_pop_1">Espresso</string>
    <string name="album_pop_1">Short n\' Sweet</string>
    <string name="avaliador_pop_1">Sofia</string>
    <string name="avaliacao_pop_1">Um hit super divertido e viciante.</string>
    <string name="nome_musica_pop_2">Please Please Please</string>
    <string name="album_pop_2">Short n\' Sweet</string>
    <string name="avaliador_pop_2">Sofia</string>
    <string name="avaliacao_pop_2">Uma música muito divertida e marcante.</string>
    <string name="nome_musica_pop_3">Feather</string>
    <string name="album_pop_3">Emails I Can\'t Send</string>
    <string name="avaliador_pop_3">Sofia</string>
    <string name="avaliacao_pop_3">Leve, divertida e muito gostosa de ouvir.</string>
    <string name="nome_musica_pop_4">Nonsense</string>
    <string name="album_pop_4">Emails I Can\'t Send</string>
    <string name="avaliador_pop_4">Sofia</string>
    <string name="avaliacao_pop_4">Uma música criativa e muito divertida.</string>
    <string name="nome_musica_pop_5">House Tour</string>
    <string name="album_pop_5">Man\'s Best Friend</string>
    <string name="avaliador_pop_5">Sofia</string>
    <string name="avaliacao_pop_5">Amei esse hit</string>
    <string name="nome_musica_pop_6">Taste</string>
    <string name="album_pop_6">Short n\' Sweet</string>
    <string name="avaliador_pop_6">Juliana Paes</string>
    <string name="avaliacao_pop_6">Ritmo moderno e viciante</string>
    <string name="nome_musica_pop_7">Skin</string>
    <string name="album_pop_7">Skin</string>
    <string name="avaliador_pop_7">Felipe Neto</string>
    <string name="avaliacao_pop_7">Composição bem pessoal</string>
    <string name="nome_musica_pop_8">Thumbs</string>
    <string name="album_pop_8">Evolution</string>
    <string name="avaliador_pop_8">Carla Dias</string>
    <string name="avaliacao_pop_8">Excelente linha de baixo</string>
    <string name="nome_musica_pop_9">Skinny Dipping</string>
    <string name="album_pop_9">Emails I Can\'t Send</string>
    <string name="avaliador_pop_9">Rafael Torres</string>
    <string name="avaliacao_pop_9">Melodia leve e narrativa incrível</string>
    <string name="nome_musica_pop_10">Fast Times</string>
    <string name="album_pop_10">Emails I Can\'t Send</string>
    <string name="avaliador_pop_10">Vanessa Martins</string>
    <string name="avaliacao_pop_10">Arranjos refinados</string>
    <string name="Samuel">Samuel Filho</string>
    <string name="nome_musica_gospel_1">Filho da Fé</string>
    <string name="album_gospel_1">The Love</string>
    <string name="avaliador_gospel_1">Maria Eduarda</string>
    <string name="avaliacao_gospel_1">Louvor lindo</string>
    <string name="nome_musica_gospel_2">Lugar Secreto</string>
    <string name="album_gospel_2">Aquieta Minh\'alma</string>
    <string name="avaliador_gospel_2">Maria Eduarda</string>
    <string name="avaliacao_gospel_2">Uma música que transmite muita paz.</string>
    <string name="nome_musica_gospel_3">Ousado Amor</string>
    <string name="album_gospel_3">Todavia Me Alegrarei</string>
    <string name="avaliador_gospel_3">Maria Eduarda</string>
    <string name="avaliacao_gospel_3">Uma mensagem muito bonita de fé.</string>
    <string name="nome_musica_gospel_4">Lugar Secreto</string>
    <string name="album_gospel_4">Pra Onde Iremos?</string>
    <string name="avaliador_gospel_4">Maria Eduarda</string>
    <string name="avaliacao_gospel_4">Um louvor muito especial.</string>
    <string name="nome_musica_gospel_5">Raridade</string>
    <string name="album_gospel_5">Ousado Amor</string>
    <string name="avaliador_gospel_5">Maria Eduarda</string>
    <string name="avaliacao_gospel_5">Uma música emocionante sobre o amor de Deus.</string>
    <string name="nome_musica_gospel_6">Todavia Me Alegrarei</string>
    <string name="album_gospel_6">Todavia Me Alegrarei</string>
    <string name="avaliador_gospel_6">Marcos Vinicius</string>
    <string name="avaliacao_gospel_6">Letra inspiradora de fé</string>
    <string name="nome_musica_gospel_7">Vitória no Deserto</string>
    <string name="album_gospel_7">Deus da Força</string>
    <string name="avaliador_gospel_7">Patrícia Santos</string>
    <string name="avaliacao_gospel_7">Edificante e cheia de força</string>
    <string name="nome_musica_gospel_8">Porque Ele Vive</string>
    <string name="album_gospel_8">Harpa Cristã</string>
    <string name="avaliador_gospel_8">Daniel Oliveira</string>
    <string name="avaliacao_gospel_8">Um clássico inesquecível</string>
    <string name="nome_musica_gospel_9">Nossa Canção</string>
    <string name="album_gospel_9">Nossa Canção</string>
    <string name="avaliador_gospel_9">Aline Barros</string>
</resources>