<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/setting_icon"
        android:title="Configurações"
        app:showAsAction="ifRoom" >

        <!-- Submenu para configuraçoes -->
        <menu>
            <item
                android:id="@+id/theme_light"
                android:title="@string/label_tema_claro" />
            <item
                android:id="@+id/theme_dark"
                android:title="@string/label_tema_escuro" />
            <item
                android:id="@+id/theme_system"
                android:title="@string/label_tema_padrao" />
        </menu>

    </item>

    <item
        android:id="@+id/action_profile"
        android:title="Perfil"
        app:showAsAction="ifRoom">

        <!-- Submenu para as opções do usuário -->
        <menu>
            <item
                android:id="@+id/action_edit_profile"
                android:title="Editar Perfil" />
            <item
                android:id="@+id/action_logout"
                android:title="Sair (Logout)" />
        </menu>

    </item>
</menu>